# Neural-Project

./: .gitignore  README.md
handwritten-htr-bench/: pyproject.toml  requirements.txt
handwritten-htr-bench/.github/workflows/: ci.yml
handwritten-htr-bench/src/htr/data/: digits.py  emnist.py  mnist.py
handwritten-htr-bench/src/htr/models/: keras_models.py  sklearn_models.py
handwritten-htr-bench/src/htr/scripts/: predict_image.py  train_digits.py  train_emnist.py  train_mnist.py
handwritten-htr-bench/src/htr/utils/: image_io.py  metrics.py  repro.py
