[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handwritten-htr-bench"
version = "0.1.0"
description = "Benchmarks for handwritten recognition (Digits/MNIST/EMNIST) using sklearn and Keras."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
